vlib/v/checker/tests/multi_return_option_not_propagated.vv
fn abc(n int) ?(int, int) {
	if n == 5 {
		return 5, 10
	}
	return none
}

fn main() {
	a, b := abc(10)
	println(a)
	println(b)
}
